# junebug-cli

./: .env.example  .gitignore  CODEX_HANDOFF.md  Cargo.toml  HANDOFF.md  LICENSE-MIT  PLAN.md  README.md  ROUTING_HANDOFF.md  index.html  install-macos.sh  run.sh
.github/workflows/: ci.yml  release.yml
docs/: swarm.txt
scripts/: keys_smoke.exp
src/: agent.rs  browser.rs  checkpoint.rs  commands.rs  config.rs  context.rs  diff.rs  editor.rs  hooks.rs  instructions.rs  lib.rs  main.rs  markdown.rs  mcp.rs  policy.rs  provider.rs  router.rs  session.rs  swarm.rs  tool.rs  webfetch.rs  websearch.rs
tests/: policy_integration.rs
