[package]
name = "junebug-cli"
version = "0.5.0"
edition = "2024"
description = "A safe, local-first coding agent CLI for Junebug models"
license = "MIT OR Apache-2.0"
repository = "https://github.com/weeksdev/junebug-cli"

[[bin]]
name = "junebug"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
crossterm = { version = "0.28", features = ["bracketed-paste"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
